# engaku

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.ai/: engaku.json  overview.md  rules.md
.ai/decisions/: 001-planner-edit-scope.md  002-delete-check-update-log-read.md  003-post-v1-enhancements.md  004-mcp-integration-post-v1.md  005-mcp-tool-allocation.md  006-configurable-hook-python.md  007-bundle-skill-authoring-skill.md  008-token-saving-mcps-optional.md  009-mandatory-token-budget-and-serena-default.md  010-default-serena-bootstrap-and-english-budget.md  011-token-budget-as-always-on-instruction.md  012-remove-default-serena-and-strict-agent-frontmatter.md  013-global-kernel-in-copilot-instructions.md  014-targeted-caveman-rewrite-defer-hook-cleanup.md  015-session-start-compactness-reminder.md  016-bundled-office-helper-toolchain.md
.ai/docs/: 2026-04-13-project-audit.md  2026-04-14-next-iteration-analysis.md  2026-04-23-vscode-copilot-1.115-1.117-analysis.md  2026-04-25-mcp-server-research.md  2026-04-28-workflow-to-skill-v118.md  2026-04-29-token-budget-instruction-redesign.md  2026-04-29-token-saving-mcp-skill-research.md  2026-05-14-copilot-mcp-office-skill-research.md  mcp-integration.md  multi-task-injection.md  planner-caveman-rewrite-and-hook-risk.md  project-history.md  skill-creator-agent-design.md  skills-and-features-research.md  vscode-1116-features-analysis.md
.ai/modules/: quality.md  scaffolding.md  session-hooks.md  templates.md
.ai/tasks/: 2026-04-10-planner-boundary-fix.md  2026-04-10-planner-redesign.md  2026-04-10-reviewer-agent.md  2026-04-10-task-lifecycle-clarity.md  2026-04-13-v4-implementation.md  2026-04-14-post-v4-consistency-cleanup.md  2026-04-15-reviewer-subagent-context.md  2026-04-15-skill-enhancements.md  2026-04-15-v5-cleanup-and-publish.md  2026-04-16-agent-cleanup-v0.3.1.md  (+38 more)
.github/: copilot-instructions.md
docs/: 2026-04-10-agent-prompt-cleanup.md  check-update-redesign.md  config-refactor-plan.md  design.md  hook-consolidation-plan.md  implementation-plan.md  project-audit-2026-04-09.md  stale-module-reminder-plan.md  transcript-edits-design.md  v2-improvements.md  v3-architecture-refactor.md  v4-native-simplification.md
tests/: test_add_mcp.py  test_apply.py  test_check_update.py  test_init.py  test_inject.py  test_list_mcp.py  test_log_read.py  test_prompt_check.py  test_setup_serena.py  test_task_review.py  test_update.py  test_utils.py  test_validate.py
(+101 files in other folders)
