[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "engaku"
version = "1.1.0"
description = "AI persistent memory layer for VS Code Copilot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/JorgenLiu/engaku"
Repository = "https://github.com/JorgenLiu/engaku"

[project.scripts]
engaku = "engaku.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"engaku" = [
    "templates/*.md",
    "templates/*.json",
    "templates/agents/*.md",
    "templates/ai/*.md",
    "templates/ai/*.json",
    "templates/instructions/*.md",
    "templates/skills/*/*.md",
]
